# GNC_System

./: .gitignore  .travis.yml  README.md  appveyor.yml
.github/workflows/: ci.yml
rasbian/: .appfg.swp  CMakeLists.txt  README.md
rasbian/app/: main.cpp
rasbian/src/: main.py
rp2040/: CMakeLists.txt  README copy.md  README.md  build_pico.py  monitor_pico.py
rp2040/include/: FC.h  config.h  radio.h  standard.h
rp2040/lib/MPU6050/: CMakeLists.txt  mpu6050.cpp  mpu6050.h  mpu6050_dmp.h
rp2040/lib/i2c_driver/: CMakeLists.txt  I2Cdev.cpp  I2Cdev.h
rp2040/lib/pwm_driver/: CMakeLists.txt  pwm_driver.cpp  pwm_driver.h
rp2040/logs/: log_11_Mar_2022_16-40.txt  log_11_Mar_2022_16-43.txt  log_11_Mar_2022_16-44.txt  log_11_Mar_2022_16-46.txt  log_11_Mar_2022_16-49.txt  log_11_Mar_2022_16-59.txt  log_11_Mar_2022_17-02.txt  log_11_Mar_2022_17-04.txt
rp2040/src/: debug_main.cpp  debug_main2.cpp  main.cpp
